--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -136,52 +136,64 @@
 
         </Grid>
 
-        <Grid Grid.Row="1"
-              RowDefinitions="*" ColumnDefinitions="*">
-            
-            <Image x:Name="tileImage"
-                   Grid.Row="0" Grid.Column="0"
-                   Margin="4,4,0,0"
-                   WidthRequest="64" HeightRequest="64"
-                   HorizontalOptions="Start" VerticalOptions="Start"
-                   Source="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets/Doujin Circle Negiramen/Negiramen Quest/Auto Generated/Images/Tile Set/adventure_field.png">
+        <ScrollView Grid.Row="1">
+            <Grid RowDefinitions="*" ColumnDefinitions="*">
 
                 <!--
-                <Image.GestureRecognizers>
-                    <PointerGestureRecognizer PointerMoved="PointerGestureRecognizer_PointerMoved" />
-                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
-                </Image.GestureRecognizers>
-                -->
-
-            </Image>
-
-
-            <!--
-                グリッド
-                ========
-
-                * グリッド線の太さを 2px として、 Margin の左と上は グリッド線の太さの半分 1 を引いて 3 から始める
-                * その代わり、画像サイズは縦横 2px 増やす
-            -->
-            <GraphicsView HorizontalOptions="Start" VerticalOptions="Start"
-                          Margin="3,3,0,0"
-                          WidthRequest="66" HeightRequest="66"
-                          Drawable="{StaticResource MyTileSetGrid}"
-                          InputTransparent="True">
-            </GraphicsView>
-
-            <!--
-                    タイル状のカーソル
+                    タイル・セット画像
                     ==================
+            
+                <Image x:Name="tileImage"
+                       Grid.Row="0" Grid.Column="0"
+                       Margin="4,4,0,0"
+                       WidthRequest="64" HeightRequest="64"
+                       HorizontalOptions="Start" VerticalOptions="Start"
+                       Source="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets/Doujin Circle Negiramen/Negiramen Quest/Auto Generated/Images/Tile Set/adventure_field.png">
                 -->
-            <GraphicsView HorizontalOptions="Start" VerticalOptions="Start"
-                          Margin="{Binding TileCursorPointAsMargin}"
-                          WidthRequest="40" HeightRequest="40"
-                          Drawable="{StaticResource MyTileCursor}"
-                          InputTransparent="True">
-            </GraphicsView>
+                <Image x:Name="tileImage"
+                       Grid.Row="0" Grid.Column="0"
+                       Margin="4,4,0,0"
+                       WidthRequest="256" HeightRequest="608"
+                       HorizontalOptions="Start" VerticalOptions="Start"
+                       Source="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets/Doujin Circle Negiramen/Negiramen Quest/Auto Generated/Images/Tile Set/map-tile-format-8x19.png">
 
-        </Grid>
+                    <!--
+                    <Image.GestureRecognizers>
+                        <PointerGestureRecognizer PointerMoved="PointerGestureRecognizer_PointerMoved" />
+                        <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
+                    </Image.GestureRecognizers>
+                    -->
+
+                </Image>
+
+
+                <!--
+                    グリッド
+                    ========
+
+                    * グリッド線の太さを 2px として、 Margin の左と上は グリッド線の太さの半分 1 を引いて 3 から始める
+                    * その代わり、画像サイズは縦横 2px 増やす
+                -->
+                <GraphicsView HorizontalOptions="Start" VerticalOptions="Start"
+                              Margin="3,3,0,0"
+                              WidthRequest="66" HeightRequest="66"
+                              Drawable="{StaticResource MyTileSetGrid}"
+                              InputTransparent="True">
+                </GraphicsView>
+
+                <!--
+                        タイル状のカーソル
+                        ==================
+                    -->
+                <GraphicsView HorizontalOptions="Start" VerticalOptions="Start"
+                              Margin="{Binding TileCursorPointAsMargin}"
+                              WidthRequest="40" HeightRequest="40"
+                              Drawable="{StaticResource MyTileCursor}"
+                              InputTransparent="True">
+                </GraphicsView>
+
+            </Grid>
+        </ScrollView>
 
         <!--
             下メニュー
