--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -270,7 +270,7 @@
 
             <Entry Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="5"
                    Placeholder="草原"
-                   Text=""
+                   Text="{Binding CommentAsStr}"
                    BackgroundColor="White"/>
 
         </Grid>
