--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -154,11 +154,17 @@
                        WidthRequest="64" HeightRequest="64"
                        HorizontalOptions="Start" VerticalOptions="Start"
                        Source="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets/Doujin Circle Negiramen/Negiramen Quest/Auto Generated/Images/Tile Set/adventure_field.png">
-                -->
                 <Image x:Name="tileImage"
                        Grid.Row="0" Grid.Column="0"
                        Margin="4,4,0,0"
                        WidthRequest="256" HeightRequest="608"
+                       HorizontalOptions="Start" VerticalOptions="Start"
+                       Source="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets/Doujin Circle Negiramen/Negiramen Quest/Auto Generated/Images/Tile Set/map-tile-format-8x19.png">
+                -->
+                <Image x:Name="tileImage"
+                       Grid.Row="0" Grid.Column="0"
+                       Margin="4,4,0,0"
+                       WidthRequest="{Binding ImageWidthAsInt}" HeightRequest="{Binding ImageHeightAsInt}"
                        HorizontalOptions="Start" VerticalOptions="Start"
                        Source="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets/Doujin Circle Negiramen/Negiramen Quest/Auto Generated/Images/Tile Set/map-tile-format-8x19.png">
 
