--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -206,6 +206,8 @@
                 <!--
                     タイル状のカーソル
                     ==================
+                
+                    * カーソルの線の幅が 4px なので、画像サイズは + 8px にする
                 -->
                 <GraphicsView HorizontalOptions="Start" VerticalOptions="Start"
                               Margin="{Binding TileCursorPointAsMargin}"
