WIP Tile Cursor

--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -211,7 +211,7 @@
                 -->
                 <GraphicsView HorizontalOptions="Start" VerticalOptions="Start"
                               Margin="{Binding TileCursorPointAsMargin}"
-                              WidthRequest="40" HeightRequest="40"
+                              WidthRequest="{Binding TileCursorWidthAsInt}" HeightRequest="{Binding TileCursorHeightAsInt}"
                               Drawable="{StaticResource MyTileCursor}"
                               InputTransparent="True">
                 </GraphicsView>
