--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -286,10 +286,7 @@
             <!--
                 ２段目 入力部
                 =============
-            -->
-            <Button Grid.Row="1" Grid.Column="0"
-                    Text="保存"/>
-            
+            -->           
             <Label Grid.Row="1" Grid.Column="1"
                    HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
@@ -323,6 +320,11 @@
                 ３段目 読み仮名部
                 =================
             -->
+            <Label Grid.Row="2" Grid.Column="1"
+                   HorizontalTextAlignment="End"
+                   VerticalTextAlignment="Center"
+                   Text="Ｉｄ"/>
+            
             <Label Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="5"
                    Text="コメント"/>
 
@@ -330,6 +332,21 @@
                 ４段目 入力部
                 =============
             -->
+            <Grid Grid.Row="3" Grid.Column="0"
+                  ColumnDefinitions="*,*" RowDefinitions="*">
+            
+                <Button Grid.Row="0" Grid.Column="0"
+                        Text="保存"/>
+                <Button Grid.Row="0" Grid.Column="1"
+                        IsEnabled="False"
+                        Text="削除"/>
+            </Grid>
+            
+            <Label Grid.Row="3" Grid.Column="1"
+                   HorizontalTextAlignment="End"
+                   VerticalTextAlignment="Center"
+                   Text="9999"/>
+
             <Entry Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="5"
                    Placeholder="草原"
                    Text="{Binding CommentAsStr}"
