--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -4,7 +4,8 @@
              xmlns:modelsDrawing="clr-namespace:_2D_RPG_Negiramen.Models.Drawing"
              xmlns:viewModels="clr-namespace:_2D_RPG_Negiramen.ViewModels"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             x:Class="_2D_RPG_Negiramen.Views.TilePaletteEditPage">
+             x:Class="_2D_RPG_Negiramen.Views.TilePaletteEditPage"
+             Loaded="ContentPage_Loaded">
 
     <ContentPage.Resources>
         <!--
@@ -336,7 +337,8 @@
                   ColumnDefinitions="*,*" RowDefinitions="*">
             
                 <Button Grid.Row="0" Grid.Column="0"
-                        Text="保存"/>
+                        Text="追加"
+                        Clicked="AddsButton_Clicked"/>
                 <Button Grid.Row="0" Grid.Column="1"
                         IsEnabled="False"
                         Text="削除"/>
