--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -337,7 +337,7 @@
                    HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
                    Padding="0,0,4,0"
-                   Text="Ｉｄ"/>
+                   Text="タイル・コード"/>
             
             <Label Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="4"
                    Padding="4,0,0,0"
