--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -361,7 +361,7 @@
             <Entry Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2"
                    HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
-                   Text="{Binding TileIdAsBASE64}"                   
+                   Text="{Binding TileIdAsCode}"                   
                    IsReadOnly="True"/>
 
             <Entry Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="4"
